# kadmium

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: check_and_lint.yml  test.yml
examples/: pea2pea.rs
src/: codec.rs  id.rs  lib.rs  main.rs  message.rs  router.rs  traits.rs  tree.rs
src/core/: id.rs  message.rs  mod.rs  routing_table.rs  traits.rs
src/quic/: mod.rs  router.rs  sync.rs
src/router/: mod.rs  sync.rs
src/tcp/: mod.rs  router.rs  sync.rs  traits.rs
tests/: broadcast.rs  connect.rs  e2e.rs  messaging.rs  peering.rs
tests/common/: mod.rs
