[package]
name = "kadmium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
time = "0.3.11"
tokio-util = "0.7.3"

[dependencies.bincode]
version = "2.0.0-rc.1"
features = ["serde"]

[dependencies.bytes]
version = "1.2.0"
features = ["serde"]

[dev-dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
parking_lot = "0.12.1"
pea2pea = "0.40.0"

[dev-dependencies.tokio]
version = "1.20.0"
features = ["full"]

[dependencies.tracing]
version = "0.1.35"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.11"
features = [ "env-filter", "fmt" ]
