[package]
name = "kadmium"
version = "0.5.0"
edition = "2021"
authors = ["niklaslong <niklas@long.ch>"]
description = "A broadcast protocol implementation based on Kadcast."
license = "MIT"
repository = "https://github.com/niklaslong/kadmium"
documentation = "https://docs.rs/kadmium"
readme = "README.md"
categories = ["algorithms", "network-programming"]
keywords = ["p2p", "peer-to-peer", "networking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
full = ["codec", "sync"]
codec = ["tokio-util/codec", "bincode", "bytes/serde"]
sync = ["async-trait", "parking_lot", "tokio"]

[dependencies]
rand = "0.8.5"
time = "0.3.11"

[dependencies.async-trait]
version = "0.1.56"
optional = true

[dependencies.parking_lot]
version = "0.12.1"
optional = true

[dependencies.bincode]
version = "2.0.0-rc.1"
features = ["serde"]
optional = true

[dependencies.bytes]
version = "1.2.0"

[dependencies.tokio]
version = "1.20.0"
features = ["full"]
optional = true

[dependencies.tokio-util]
version = "0.7.3"
optional = true

[dev-dependencies]
deadline = "0.2.0"
pea2pea = "0.40.0"

[dev-dependencies.tracing]
version = "0.1.35"
default-features = false

[dev-dependencies.tracing-subscriber]
version = "0.3.11"
features = [ "env-filter", "fmt" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
